# business-insights-and-networks

./: .gitignore  README.md  config.yml  pyproject.toml
data/: Export 16_12_2025 11_39.xlsx  Orbis type shit.csv  Orbis_155_comp_extra_fields.xlsx  analysis_sample.csv  analysis_sample.parquet  filtered_sdc.csv  final_merged_data.csv  model_comparison.csv  patents.parquet  regression_models.rds  sdc_patents_orbis_merged.parquet
docs/: data_dictionary_annualized_pvQ4_2025.xlsx  patents_view_description.md
extra/: sdc_to_orbis_map.csv
notebooks/: BI project SDC EDA.R  EDA.R  Untitled.Rmd  Untitled.nb.html  merged_mppdy_orbis_bs.R  merged_mppdy_orbis_bs.Rmd  patents_preprocess.R  patents_preprocess.ipynb  test.ipynb
rds/: merge_regression_dataframe.R  orbis_data.R  regression_analysis.R  reporting_utils.R  sdc_data.R
src/: README.md  merge_regression_dataframe.R  orbis_data.R  patents_data.R  regression_analysis.R  sdc_data.R
working_data/: analysis_sample.csv  filtered_sdc.csv  model_comparison.csv  orbis_cleaned.csv  sdc_patents_orbis_merged.csv
