[project]
name = "business-insights-and-networks"
version = "0.1.0"
description = ""
authors = [
    {name = "skyrimer",email = "chekmenev2004@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "pycountry (>=24.6.1,<25.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "pyarrow (>=22.0.0,<23.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipywidgets (>=8.1.8,<9.0.0)",
    "ipykernel (>=7.1.0,<8.0.0)"
]
