[project]
name = "business-insights-and-networks"
version = "0.1.0"
description = ""
authors = [
    {name = "skyrimer",email = "chekmenev2004@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14.1"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "pycountry (>=24.6.1,<25.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "pyarrow (>=22.0.0,<23.0.0)",
    "pyreadr (>=0.5.4,<0.6.0)",
    "networkx (>=3.6.1,<4.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "scipy (>=1.16.3,<2.0.0)",
    "pycountry-convert (>=0.7.2,<0.8.0)",
    "country-converter (>=1.3.2,<2.0.0)",
    "ipykernel (>=7.1.0,<8.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipywidgets (>=8.1.8,<9.0.0)",
    "ipykernel (>=7.1.0,<8.0.0)"
]
